# company-detective

./: .gitignore  EXAMPLE_OUTPUT.md  LLM_FEEDBACK.md  Makefile  NOTES.md  Pipfile  README.md  STYLE.md  pyproject.toml  pytest.ini  reddit_examples_tagged_s6.md
.github/workflows/: close_stale_prs.yml  run_tests.yml  suggest_readme_updates.yml
docs/: add_company.html  index.html
docs/companies/: 2K_Games.html  98point6.html  98point6_20240917_091623.html  A_Place_for_Mom.html  Abridge.html  Actual_AI.html  Adswerve.html  Adswerve__Inc_.html  AfterQuery.html  Akili_Interactive.html  Akili_Interactive_20240916_154811.html  Anduril.html  Bamboo.html  (+122 more)
logs/: glassdoor_page_parse_reviews_failure.html
notes/: NOTES.md  QUOTE_EXTRACTION.md
src/: airtable.py  build_website.py  builtin.py  builtin_to_airtable.ipynb  company_webpage.py  core.py  crunchbase.py  crunchbase_models.py  customer_experience.py  diagrams.ipynb  general_search.py  glassdoor.ipynb  glassdoor.py  glassdoor_page_parse_reviews_failure copy.html  glassdoor_page_parse_reviews_failure.html  llm_utils.py  news.ipynb  output.json  poc_airtable.ipynb  poc_app_store.ipynb  poc_builtin.ipynb  poc_company_webpage.ipynb  poc_linkedin.ipynb  poc_llm_search.ipynb  poc_optimized_reddit_search.ipynb  poc_optimized_search.ipynb  poc_search_module.ipynb  poc_steam_scraper.ipynb  poc_unified_customer_feedback.ipynb  poc_url_optimizer.ipynb  reddit.ipynb  reddit.py  reddit_summarizer.py  refresh_data.py  scraped_job_descriptions.csv  search.ipynb  search.py  stored_config.py  test_app_stores.ipynb  test_crunchbase.ipynb  (+20 more)
(+554 files in other folders)
